--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@types/jest": "^29.5.3",
     "cross-env": "^7.0.3",
-    "eslint": "^8.46.0",
+    "eslint": "^8.57.0",
     "fkill-cli": "^7.1.0",
+    "globals": "^15.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "nodemon": "^3.0.1"
